--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,13 @@ description = "A simple implementation of egui for ggez"
 
 [dependencies]
 egui = "0.24.1"
-ggez = "0.9.1"
+#ggez = "0.9.1"
+
+[dependencies.ggez]
+git = "https://github.com/snyball/ggez.git"
+rev = "74ed4c7688cdd03a84c5c98f9c8650ec3947cf07"
+default-features = false
+features = ["audio", "gamepad"]
 
 [dev-dependencies]
 egui_demo_lib = "0.24"
